this shit is ready!

--- a/index.html
+++ b/index.html
@@ -116,75 +116,29 @@
 							<div class="item">
 								<img src="img/spesiality.jpg" alt="Something usefull">
 								<div class="slider-caption" style="margin-top: -105.5px;">
-									<div class="ak-container">
-										<div class="caption-content-wrapper">
-											<h3 class="caption-title"></h3>
-
-											<div class="caption-content"></div>
-										</div>
-
+									<!--<div class="ak-container">-->
+										<!--<div class="caption-content-wrapper">-->
+											<!--<h3 class="caption-title"></h3>-->
+											<!--<div class="caption-content"></div>-->
+										<!--</div>-->
 										<!--<a class="caption-read-more" href="#">Подробнее</a>-->
-									</div>
+									<!--</div>-->
 								</div>
 							</div>
 							<div class="item">
 								<img src="img/sputnik-min.png" alt="Something usefull">
-								<div class="slider-caption" style="margin-top: -105.5px;">
-									<div class="ak-container">
-										<div class="caption-content-wrapper">
-											<h3 class="caption-title">Современные системы дистанционного зондирования</h3>
-
-											<div class="caption-content"></div>
-										</div>
-
-										<!--<a class="caption-read-more" href="#">Подробнее</a>-->
-									</div>
-								</div>
 							</div>
 							<div class="item">
 								<img src="img/milky-way-min.png" alt="Something usefull">
-								<div class="slider-caption" style="margin-top: -95.5px;">
-									<div class="ak-container">
-										<div class="caption-content-wrapper">
-											<h3 class="caption-title">Радиоастрономические системы и комплексы</h3>
-											<!--<div class="caption-content"> </div>-->
-										</div>
-									</div>
-								</div>
 							</div>
 							<div class="item">
 								<img src="img/IMG4.jpg" alt="Something usefull">
-								<div class="slider-caption" style="margin-top: -95.5px;">
-									<div class="ak-container">
-										<div class="caption-content-wrapper">
-											<h3 class="caption-title">Работа с современной измерительной техникой</h3>
-											<!--<div class="caption-content">Рубрика присвячена кожному, хто прагне досягти успіхів у кражi коду з сайту КПI. </div>-->
-										</div>
-									</div>
-								</div>
 							</div>
 							<div class="item">
 								<img src="img/languages.jpg" alt="Something usefull">
-								<div class="slider-caption" style="margin-top: -95.5px;">
-									<div class="ak-container">
-										<div class="caption-content-wrapper">
-											<h3 class="caption-title">Современные языки программирования</h3>
-											<!--<div class="caption-content">Рубрика присвячена кожному, хто прагне досягти успіхів у кражi коду з сайту КПI. </div>-->
-										</div>
-									</div>
-								</div>
 							</div>
 							<div class="item">
 								<img src="img/laser2.jpg" alt="Something usefull">
-								<div class="slider-caption" style="margin-top: -95.5px;">
-									<div class="ak-container">
-										<div class="caption-content-wrapper">
-											<h3 class="caption-title">Лазерные технологии</h3>
-
-											<!--<div class="caption-content">Рубрика присвячена кожному, хто прагне досягти успіхів у кражi коду з сайту КПI. </div>-->
-										</div>
-									</div>
-								</div>
 							</div>
 						</div>
 					</div>
@@ -254,6 +208,26 @@
 			</div>
 		</div>
 	</div>
+	<!--PAGINATION-->
+	<div class="pagination-wrap">
+		<div class="container">
+			<div class="col-md-12 col-sm-12">
+				<ul class="pagination away">
+					<li><a href="#">«</a></li>
+					<li><a href="#">1</a></li>
+					<li><a class="active" href="#">2</a></li>
+					<li><a href="#">3</a></li>
+					<li><a href="#">4</a></li>
+					<li><a href="#">5</a></li>
+					<li><a href="#">6</a></li>
+					<li><a href="#">7</a></li>
+					<li><a href="#">»</a></li>
+				</ul>
+				<div class="pag-mobile">« Назад</div>
+				<div class="pag-mobile">Вперед »</div>
+			</div>
+		</div>
+	</div>
 	<!--LOWER-SLIDER-->
 	<div id="slider-partners" class="sect">
 			<div class="container">
@@ -282,6 +256,7 @@
 				</div>
 			</div>
 		</div>
+
 	<!--FOOTER-SPACE-->
 	<div class="bottom"></div>
 </div>
