--- a/news-list-example.html
+++ b/news-list-example.html
@@ -52,6 +52,23 @@
                 </div>
             </div>
 
+            <!--PAGINATION-->
+            <div class="pagination-wrap">
+                        <ul class="pagination away">
+                            <li><a href="#">«</a></li>
+                            <li><a href="#">1</a></li>
+                            <li><a class="active" href="#">2</a></li>
+                            <li><a href="#">3</a></li>
+                            <li><a href="#">4</a></li>
+                            <li><a href="#">5</a></li>
+                            <li><a href="#">6</a></li>
+                            <li><a href="#">7</a></li>
+                            <li><a href="#">»</a></li>
+                        </ul>
+                        <div class="pag-mobile">« Назад</div>
+                        <div class="pag-mobile">Вперед »</div>
+            </div>
+
             <hr style="border: 2px solid #000000">
             <p style="font-size: 45px; color: #000000; padding: 0 15px">ОТКРЫТАЯ НОВОСТЬ</p>
             <div class="news-item-open">
